<resources>
    <string name="app_name">StudentsRegister</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="email_hint">Email</string>
    <string name="nameInput_hint">Name</string>
    <string name="deviceAsk_label">Do you have?</string>
    <string name="checkbox_laptop">Laptop</string>
    <string name="check_android_phone">Android phone</string>
    <string name="user_info_title">Personal Information</string>
    <string name="ageform_title">Age</string>
    <string name="younger_18" translatable="false"><![CDATA[<18]]></string>
    <string name="age_18to65" translatable="false">18-65</string>
    <string name="age_65" translatable="false">65</string>
    <string name="register_btn_txt">Register</string>
    <string name="logo">Logo</string>
    <string name="icon_laptop">laptop_icon</string>
    <string name="icon_phone">icon_phone</string>
    <string name="select_and_version">Select version</string>
    <string name="username_error_msg">Please type your complete name</string>
    <string name="passwds_dont_match">Passwords don\'t match</string>
    <string name="email_input_error_msg">Please, type a valid email</string>
    <string name="incomplete_psswd_msg">Please finish typing your password</string>

    <string-array name="android_versions">
        <item>Version</item>
        <item>Jelly Bean</item>
        <item>KitKat</item>
        <item>Lollipop</item>
        <item>Marshmallow</item>
        <item>Nougat</item>
    </string-array>

    <string name="and_select" translatable="false">Version</string>
    <string name="and_jb" translatable="false">Jelly Bean</string>
    <string name="and_kk" translatable="false">KitKat</string>
    <string name="and_llp" translatable="false">Lollipop</string>
    <string name="and_mm" translatable="false">Marshmallow</string>
    <string name="and_ngt" translatable="false">Nougat</string>
    <string name="ask_and_version_toast">Please select an Android Version</string>
    <string name="user_info">User Information</string>
    <string name="younger_than_18">Younger than 18</string>
    <string name="between_18_65">Between 18 and 65yo</string>
    <string name="older_than_65">Older than 65 yo</string>
    <string name="has_laptop">Owns a laptop</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="has_and_phone">Owns an Android Phone</string>
    <string name="attrname_value_separator" translatable="false">": "</string>
</resources>
